WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89247
[chromium] Fix composited scrollbars with transparent thumbs
https://bugs.webkit.org/show_bug.cgi?id=89247
Summary
[chromium] Fix composited scrollbars with transparent thumbs
Adrienne Walker
Reported
2012-06-15 14:32:38 PDT
[chromium] Fix composited scrollbars with transparent thumbs
Attachments
Patch
(3.54 KB, patch)
2012-06-15 14:34 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2012-06-15 14:34:13 PDT
Created
attachment 147900
[details]
Patch
Adrienne Walker
Comment 2
2012-06-15 14:37:35 PDT
See:
http://code.google.com/p/chromium/issues/detail?id=132995
ChromeOS's scrollbar native theme expects the thumb to be transparent, so if blending isn't turned on then it renders incorrectly as black. I tried making a test for this, but unfortunately render theme scrollbars don't appear to respect opacity. I'll take suggestions for testing.
James Robinson
Comment 3
2012-06-15 14:41:00 PDT
Comment on
attachment 147900
[details]
Patch Re testing: have a setter on the mock scrollbar theme?
Adrienne Walker
Comment 4
2012-06-15 15:20:38 PDT
Comment on
attachment 147900
[details]
Patch I'm going to just CQ+ this since it fixes an issue. Once ScrollbarLayerChromium supports native Mac scrollbars, compositing layout tests can cover this naturally, without awkwardly plumbing a setting down to ScrollbarThemeMock just for this one regression.
WebKit Review Bot
Comment 5
2012-06-15 16:33:36 PDT
Comment on
attachment 147900
[details]
Patch Clearing flags on attachment: 147900 Committed
r120509
: <
http://trac.webkit.org/changeset/120509
>
WebKit Review Bot
Comment 6
2012-06-15 16:33:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug