[chromium] Fix composited scrollbars with transparent thumbs https://bugs.webkit.org/show_bug.cgi?id=89247

Reviewed by James Robinson.

On some platforms, the thumb of a scrollbar can be transparent. Fix by
always drawing the thumb quad with blending.

* platform/graphics/chromium/cc/CCScrollbarLayerImpl.cpp:
(WebCore::CCScrollbarLayerImpl::appendQuads):
* platform/graphics/chromium/cc/CCTextureDrawQuad.cpp:
(WebCore::CCTextureDrawQuad::setNeedsBlending):
(WebCore):
* platform/graphics/chromium/cc/CCTextureDrawQuad.h:
(CCTextureDrawQuad):


Canonical link: https://commits.webkit.org/107121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120509 268f45cc-cd09-0410-ab3c-d52691b4dbfc