Source/WebCore/platform/graphics/chromium/cc/CCTextureDrawQuad.cpp
@@ -43,4 +43,9 @@ CCTextureDrawQuad::CCTextureDrawQuad(const CCSharedQuadState* sharedQuadState, c
 {
 }
 
+void CCTextureDrawQuad::setNeedsBlending()
+{
+    m_needsBlending = true;
+}
+
 }
